@@ -150,7 +150,7 @@ Keywords:
    
 
 
-(c) 2001-2004   Rainer Scherg (Rainer.Scherg@gmx.de)
+(c) 2001-2005   Rainer Scherg (Rainer.Scherg@gmx.de)
 http://dvbsnoop.sourceforge.net
 
 
