@@ -1,5 +1,5 @@
 /*
-$Id: dvb_descriptor.h,v 1.11 2004/07/25 20:12:58 rasc Exp $ 
+$Id: dvb_descriptor.h,v 1.12 2005/01/17 19:41:22 rasc Exp $ 
 
 
  DVBSNOOP
@@ -7,7 +7,7 @@ $Id: dvb_descriptor.h,v 1.11 2004/07/25 20:12:58 rasc Exp $
  a dvb sniffer  and mpeg2 stream analyzer tool
  http://dvbsnoop.sourceforge.net/
 
- (c) 2001-2004   Rainer.Scherg@gmx.de (rasc)
+ (c) 2001-2005   Rainer.Scherg@gmx.de (rasc)
 
 
  -- DVB Descriptors  ETSI 300 468
@@ -15,6 +15,9 @@ $Id: dvb_descriptor.h,v 1.11 2004/07/25 20:12:58 rasc Exp $
 
 
 $Log: dvb_descriptor.h,v $
+Revision 1.12  2005/01/17 19:41:22  rasc
+Bugfix: data broadcast descriptor (tnx to Sergio SAGLIOCCO, SecureLAB)
+
 Revision 1.11  2004/07/25 20:12:58  rasc
  - New: content_identifier_descriptor (TS 102 323)
  - New: TVA_id_descriptor (TS 102 323)
