@@ -1,5 +1,5 @@
 /*
-$Id: teletext.h,v 1.3 2004/02/05 10:30:56 rasc Exp $
+$Id: teletext.h,v 1.4 2005/01/17 19:41:22 rasc Exp $
 
 
  DVBSNOOP
@@ -7,7 +7,7 @@ $Id: teletext.h,v 1.3 2004/02/05 10:30:56 rasc Exp $
  a dvb sniffer  and mpeg2 stream analyzer tool
  http://dvbsnoop.sourceforge.net/
 
- (c) 2001-2004   Rainer.Scherg@gmx.de (rasc)
+ (c) 2001-2005   Rainer.Scherg@gmx.de (rasc)
 
 
  -- misc routines for EBU teletext
@@ -19,8 +19,6 @@ $Id: teletext.h,v 1.3 2004/02/05 10:30:56 rasc Exp $
 #ifndef _TELETEXT_H_
 #define _TELETEXT_H_
 
-
-void   unParityTeletextData (u_char *b, int len);
 
 int    print_teletext_control_decode (int v, u_char *b, int len);
 void   print_teletext_data_x0_x25 (int v, char *s, u_char *b, int len);
