@@ -1,5 +1,5 @@
 /*
-$Id: cmdline.h,v 1.24 2004/12/07 21:01:42 rasc Exp $
+$Id: cmdline.h,v 1.25 2005/01/17 19:41:22 rasc Exp $
 
 
  DVBSNOOP
@@ -7,7 +7,7 @@ $Id: cmdline.h,v 1.24 2004/12/07 21:01:42 rasc Exp $
  a dvb sniffer  and mpeg2 stream analyzer tool
  http://dvbsnoop.sourceforge.net/
 
- (c) 2001-2004   Rainer.Scherg@gmx.de (rasc)
+ (c) 2001-2005   Rainer.Scherg@gmx.de (rasc)
 
 
 
